--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!--
 REQUIREMENTS:
 The use of heading tags, colored text, a background color or picture, a link out to a page about your “something”.
+
+My Discord is:
+ζ͜͡๖ۣmysteriou็็็s็็็ss#4579
 -->
 
 <html>
