--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ My Discord is:
 
 <html>
     <head>
-        <title>Andrew's Dictionary</title>
+        <title>School Project - Dictionary</title>
         <style>
         body {
           background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ73TAWf396mhyY5VC_TD9uwf6hBMKC-fwn0A&usqp=CAU");
