--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ My Discord is:
         </script>
         
         <center>
-          <h1>Andrew's Dictionary</h1>
+          <h1>School Project - Dictionary</h1>
           <hr>
           <br>
           <a href="https://www.merriam-webster.com/">Link to a dictionary</a>
